apps/local/media/jellyseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: "sso-authelia@kubernetescrd"
spec:
  rules:
    - host: jellyseerr.bubylou.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  name: http
  tls:
    - hosts:
      - jellyseerr.bubylou.com
      secretName: jellyseerr-bubylou-tls
